--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,5 +5,5 @@
 .osg-header {
   @extend %osg-padding-horizontal-4-breakpoint-large;
   background-color: colors.$white;
-  border-bottom: 1px solid colors.$grayscale-40;
+  border-bottom: 1px solid colors.$gray;
 }
